# auto-survey

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  makefile  mkdocs.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
docs/: index.md
src/auto_survey/: __init__.py  agent.py  app.py  ascii.py  cli.py  data_models.py  llm.py  pdf_conversion.py  prompts.py  search.py  summarisation.py  tools.py  utils.py  writing.py
src/scripts/: main.py  versioning.py
tests/: __init__.py  test_pdf_conversion.py  test_writing.py
