[project]
name = "auto_survey"
version = "0.0.0"
description = "Automated literature surveys."
readme = "README.md"
authors = [
    {name = "Dan Saattrup Smart", email = "dan.smart@alexandra.dk"},
]
maintainers = [
    {name = "Dan Saattrup Smart", email = "dan.smart@alexandra.dk"},
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "click>=8.3.0",
    "httpx==0.27.2",
    "litellm>=1.77.7",
    "markdownify>=1.2.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scholarly>=1.7.11",
    "smolagents>=1.22.0",
    "termcolor>=3.1.0",
]

[project.urls]
Repository = "https://github.com/alexandrainst/auto_survey"
Issues = "https://github.com/alexandrainst/auto_survey/issues"

[project.license]
file = "LICENSE"

[project.scripts]
conduct-survey = "auto_survey.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pre-commit>=4.3.0",
    "readme-coverage-badger>=1.0.1",
    "click>=8.2.1",
    "ruff>=0.13.2",
    "mypy>=1.18.2",
    "nbstripout>=0.8.1",
    "coverage>=7.10.5",
    "mkdocs-material>=9.6.18",
    "mkdocs-include-markdown-plugin>=7.1.6",
    "mkdocs-include-dir-to-nav>=1.2.0",
    "mkapi>=4.4.5",
    "pip>=25.0.1",
]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]
extend-include = [
    "*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    # isort (imports)
    "I",
    # pydocstyle (docstrings)
    "D",
    # pycodestyle errors and warnings (PEP8)
    "E",
    "W",
    # flake-annotations (type hints)
    "ANN",
    # Pyflakes
    "F",
]
ignore = [
    # Type annotations for "self" arguments
    "ANN101",
    # Type annotations for "cls" arguments
    "ANN102",
    # Type annotations for *args
    "ANN002",
    # Type annotations for **kwargs
    "ANN003",
    # Docstrings for **kwargs
    "D417",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "F401",
]
"src/scripts/main.py" = [
    "I",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    '--durations=10',
    '--color=yes',
    '--doctest-modules',
    '--cov=src/auto_survey',
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning",
    "ignore::ResourceWarning",
    "ignore::FutureWarning",
]
log_cli_level = "info"
testpaths = [
    "tests",
    "src/auto_survey",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
